refactor(test): enhance SaleServiceTest for improved clarity and functionality